fixed squashed about box

--- a/src/pages/Pages.module.css
+++ b/src/pages/Pages.module.css
@@ -81,6 +81,7 @@ h6 {
 .aboutSnip {
   background-color: #434141;
   width: 15vw;
+  min-width: 200px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -162,7 +163,7 @@ h6 {
 }
 @media only screen and (min-width: 2280px) {
   .homeWrapper {
-    max-width: 1600px;
+    max-width: 1800px;
     margin: 0 auto;
     font-size: 1.2rem; /* Adjust the base font size */
     line-height: 1.6; /* Adjust the line height for better readability */
